@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2174 2012/02/13 11:33:37 mg Exp $
+# $Id: CHANGES,v 1.2175 2012/02/13 12:20:00 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.2 2012-03-??
+ - 2012-02-13 Fixed bug#8202 - Kernel::System::JSON->Decode() dies when providing malformed JSON.
  - 2012-02-13 Fixed bug#8211 - Typos in Labels: DYNAMICFILED.
  - 2012-02-09 Fixed bug#7109 - Statistics error when PDF support is not active.
 
